--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-jsonnet",
-  "version": "0.0.0",
+  "version": "0.5.0-beta",
   "description": "jsonnet wrapper for Node.js",
   "main": "index.js",
   "directories": {
