--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.9.4-rc1",
   "description": "jsonnet wrapper for Node.js",
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "directories": {
     "test": "test/"
   },
