Update README and LICENSE Also update package version to rc1

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@unboundedsystems/jsonnet",
-  "version": "0.9.4",
+  "version": "0.9.4-rc1",
   "description": "jsonnet wrapper for Node.js",
   "main": "lib/index.js",
   "directories": {
